--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MALAR Makeup Studio</title>
-    <meta name="description" content="Premium makeup studio offering bridal makeup, party makeup, HD & airbrush services, and professional makeup training in an elegant setting." />
+    <title>Malar Makeup Artistry | Professional Bridal & HD Makeup Artist</title>
+    <meta name="description" content="Premium makeup studio offering bridal makeup, party makeup, HD & airbrush services, and professional makeup training in an elegant setting.Location: Chennai." />
+    <meta name="keywords" content="malar makeup, malar artistry, bridal makeup, hd makeup, chennai makeup artist, tamilnadu makeup artist, wedding makeup, party makeup, makeup training, Semmencheri beauty parlour, Shollinganalur beauty parlour, local makeup artist, makeup artist nearme, professional makeup services, airbrush makeup, makeup studio chennai" />
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <link rel="canonical" href="https://malar-studio-elegance.vercel.app/">
     <meta name="author" content="MALAR Makeup And Learning Space" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/jpeg" href="/logo.jpeg" />
-    <meta property="og:title" content="MALAR Makeup Studio" />
-    <meta property="og:description" content="Premium makeup studio offering bridal makeup, party makeup, HD & airbrush services, and professional makeup training." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="Malar Makeup Artistry | Bridal Makeup Expert">
+    <meta property="og:description" content="Book your bridal, HD, party, or groom makeup. 100+ satisfied clients. Location: Chennai.">
+    <meta property="og:image" content="/og-cover.jpg">
+    <meta property="og:url" content="https://malar-studio-elegance.vercel.app/">
+    <meta property="og:type" content="website">
   </head>
 
   <body>
