--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
     <meta property="og:image" content="/og-cover.jpg">
     <meta property="og:url" content="https://malar-studio-elegance.vercel.app/">
     <meta property="og:type" content="website">
+
+    <meta name="geo.region" content="IN-TN">
+    <meta name="geo.placename" content="Chennai">
+    <meta name="geo.position" content="12.884136, 80.214867">
+    <meta name="ICBM" content="12.884136, 80.214867">
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="application/ld+json" src="/structured-data.json"></script>
   </body>
 </html>
