--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="Dx29km4haKbvl6Jp0sKqPyJKrwXLuP7C79E3obbPdaE" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Malar Makeup Artistry | Professional Bridal & HD Makeup Artist</title>
