meta description added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Malar Makeup Artistry | Professional Bridal & HD Makeup Artist</title>
     <meta name="description" content="Premium makeup studio offering bridal makeup, party makeup, HD & airbrush services, and professional makeup training in an elegant setting.Location: Chennai." />
-    <meta name="keywords" content="malar makeup, malar artistry, bridal makeup, hd makeup, chennai makeup artist, tamilnadu makeup artist, wedding makeup, party makeup, makeup training, Semmencheri beauty parlour, Shollinganalur beauty parlour, local makeup artist, makeup artist nearme, professional makeup services, airbrush makeup, makeup studio chennai" />
+    <meta name="keywords" content="malar makeup, malar artistry, bridal makeup, hd makeup, chennai makeup artist, tamilnadu makeup artist, wedding makeup, party makeup, makeup training, Semmencheri beauty parlour, Shollinganalur beauty parlour, local makeup artist, makeup artist nearme, professional makeup services, airbrush makeup, makeup studio chennai, shollinganalur makeup studio, azhugu nilayam, learn makeup" />
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <link rel="canonical" href="https://malar-studio-elegance.vercel.app/">
